# gco

./: LICENSE  README.md  gco.yml
data/checkpoints/cogen_model/: cogen_model_cogen_model_20250926_125948_epoch_999_r_c_flex.pth
flow_matching/: gco_mrmp_env_full.yml  setup.py
flow_matching/flow_matching/: __init__.py
flow_matching/flow_matching/solver/: __init__.py  cogen_solver.py  discrete_solver.py  ode_solver.py
flow_matching/flow_matching/utils/: __init__.py  model_wrapper.py
gco/: setup.py
gco-cpp/: CMakeLists.txt  install_bindings.sh  requirements.txt  setup.py
gco-cpp/bindings/: ctswap_bindings.cpp
gco-cpp/examples/: CMakeLists.txt  planner_example.cpp
gco-cpp/examples/common/: configuration_generators.cpp  configuration_generators.hpp  example_template.hpp  task_setup.cpp  task_setup.hpp  visualization_utils.cpp  visualization_utils.hpp
gco-cpp/include/gco/: robot.hpp  types.hpp  utils.hpp
gco-cpp/include/gco/collisions/: collisions.hpp
gco-cpp/include/gco/geometric_shapes/: geometric_shapes.hpp
gco-cpp/include/gco/heuristics/: bwd_dijkstra_heuristic.hpp  euclidean_heuristic.hpp  heuristic.hpp
gco-cpp/include/gco/objects/: objects.hpp
gco-cpp/include/gco/obstacles/: obstacles.hpp
gco-cpp/include/gco/planners/: base_planner.hpp  ctswap.hpp  gspi.hpp  object_centric_a_star.hpp  object_gspi.hpp  pibt.hpp  planner_stats.hpp
gco-cpp/include/gco/spatial/: transforms.hpp
gco-cpp/include/gco/utils/: progress_tracker.hpp
gco-cpp/include/gco/world/: world.hpp
gco-cpp/src/: robot.cpp  utils.cpp  world.cpp
gco-cpp/src/geometric_shapes/: geometric_shapes.cpp
gco-cpp/src/heuristics/: bwd_dijkstra_heuristic.cpp  euclidean_heuristic.cpp
gco-cpp/src/objects/: objects.cpp
gco-cpp/src/obstacles/: obstacles.cpp
gco-cpp/src/planners/: base_planner.cpp  ctswap.cpp  gspi.cpp  object_centric_a_star.cpp  object_gspi.cpp  pibt.cpp
gco-cpp/src/utils/: progress_tracker.cpp
gco/gco/: __init__.py
gco/gco/config/: config.py
gco/gco/datasets/: __init__.py  contact_trajectory_dataset.py
gco/gco/models/: __init__.py  contact_push_model.py
gco/gco/observations/: __init__.py  observation_generator.py
gco/gco/planners/: __init__.py  planner.py
gco/gco/planners/multi/: __init__.py  iterative_push_planner.py  multi_object_planner.py  multi_robot_planner.py
gco/gco/tasks/: tasks.py
gco/gco/utils/: __init__.py  data_vis_utils.py  model_utils.py  shape_utils.py  traj_utils.py  transform_utils.py  viz_utils.py
gco/gco/world/: __init__.py  objects.py  obstacles.py  robot.py  simulator.py  world.py
scripts/: create_flexible_robot_dataset.py  model_evaluation_benchmark.py  run_explicit_model_evaluation.py  train_contact_trajectory_model.py
utils/: visualize_trajectories.py
